--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.10.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^14.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
