--- a/server/package.json
+++ b/server/package.json
@@ -15,16 +15,21 @@
     "apollo-server-express": "^2.10.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "graphql": "^14.6.0"
+    "graphql": "^14.6.0",
+    "mongodb": "^3.5.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
+    "@types/mongodb": "^3.3.15",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
