--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -11,6 +11,7 @@
   "rules": {
     "indent": "off",
     "@typescript-eslint/indent": "off",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/interface-name-prefix": 0
   }
 }
