--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
+    "start:local": "NODE_ENV='LOCAL' nodemon src/index.ts",
+    "seed": "ts-node temp/seed.ts",
     "build": "tsc -p ./",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
