chore: update env vars example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,13 @@
 # MongoDB config
 PORT=9000
 DB_USER=<your_db_user>
-DB_USER_PASSWORD=<your_db_password>
-DB_CLUSTER=<you_db_cluster>
+DB_USER_PASSWORD=<your_db_user_password>
+DB_CLUSTER=<your_db_cluster>
+DB_NAME=<your_db_name>
+DB_COLLECTION=<your_db_collection> #Same for local and atlas
+
+# LOCAL SETUP
+LOCAL_DB_USER=<local_db_user>
+LOCAL_DB_USER_PASSWORD=<your_local_db_password>
+LOCAL_MONGO_URL=mongodb://localhost:27017/
+LOCAL_DB_NAME=<your_local_db_name>
