--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "start:local": "NODE_ENV='LOCAL' nodemon src/index.ts",
+    "start:local": "NODE_ENV=LOCAL nodemon src/index.ts",
     "seed": "ts-node temp/seed.ts",
+    "seed:local": "NODE_ENV=LOCAL ts-node temp/seed.ts",
     "build": "tsc -p ./",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
