--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,14 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^3.5.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/lodash.merge": "^4.6.6",
     "@types/mongodb": "^3.3.15",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
