--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.0.0",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
