feat: add types and schema for listing, booking and user and new seed data

--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "House listing server using Node, Express, GraphQL",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "start:local": "NODE_ENV=LOCAL nodemon src/index.ts",
-    "seed": "ts-node seed-data/seed.ts",
-    "seed:local": "NODE_ENV=LOCAL ts-node temp/seed.ts",
+    "start:prod": "nodemon src/index.ts",
+    "start": "NODE_ENV=LOCAL nodemon src/index.ts",
+    "seed:prod": "ts-node seed-data/seed.ts",
+    "seed": "NODE_ENV=LOCAL ts-node seed-data/seed.ts",
+    "clear:prod": "ts-node seed-data/clear.ts",
+    "clear": "NODE_ENV=LOCAL ts-node seed-data/clear.ts",
     "build": "tsc -p ./",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,6 +33,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/mongodb": "^3.3.15",
     "@types/node": "^13.7.0",
+    "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "dotenv": "^8.2.0",
