chore: update env example

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,10 +4,13 @@ DB_USER=<your_db_user>
 DB_USER_PASSWORD=<your_db_user_password>
 DB_CLUSTER=<your_db_cluster>
 DB_NAME=<your_db_name>
-DB_COLLECTION=<your_db_collection> #Same for local and atlas
 
 # LOCAL SETUP
 LOCAL_DB_USER=<local_db_user>
 LOCAL_DB_USER_PASSWORD=<your_local_db_password>
 LOCAL_MONGO_URL=mongodb://localhost:27017/
 LOCAL_DB_NAME=<your_local_db_name>
+
+CLIENT_ID=<client_id>
+CLIENT_SECRET=<client_secret>
+PUBLIC_URL=http://localhost:3000
