--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "apollo-server-express": "^2.10.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "googleapis": "^47.0.0",
     "graphql": "^14.6.0",
     "lodash.merge": "^4.6.2",
     "mongodb": "^3.5.2"
