feat: add cookie on login

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,6 +11,9 @@ LOCAL_DB_USER_PASSWORD=<your_local_db_password>
 LOCAL_MONGO_URL=mongodb://localhost:27017/
 LOCAL_DB_NAME=<your_local_db_name>
 
-CLIENT_ID=<client_id>
-CLIENT_SECRET=<client_secret>
+GOOGLE_CLIENT_SECRET=<client_id>
+GOOGLE_SECRET=<client_secret>
 PUBLIC_URL=http://localhost:3000
+# COOKIE 
+COOKIE_SECRET=<cookie_secret>
+NODE_ENV=<development|production>
