--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "apollo-server-express": "^2.10.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "googleapis": "^47.0.0",
     "graphql": "^14.6.0",
