--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,19 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
     "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/react-router-dom": "^5.1.3",
-    "antd": "^4.0.0",
+    "antd": "4.0.0",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
@@ -32,6 +32,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.3.3",
     "apollo": "2.33.4",
     "apollo-codegen-core": "0.40.3",
     "apollo-language-server": "1.26.3",
